--- a/fragnix-core.cabal
+++ b/fragnix-core.cabal
@@ -16,7 +16,12 @@ extra-source-files:  CHANGELOG.md
 library
   exposed-modules:     Fragnix.Core.Slice
   other-modules:
-  build-depends:       base ^>=4.13.0.0
+  build-depends:       aeson >=1.4 && <1.5
+                     , base ^>=4.13.0.0
+                     , hashable >=1.3 && <1.4
+                     , text >=1.2 && < 1.3
+
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -Wall
 
