--- a/fragnix-core.cabal
+++ b/fragnix-core.cabal
@@ -15,6 +15,7 @@ extra-source-files:  CHANGELOG.md
 
 library
   exposed-modules:     Fragnix.Core.Slice
+                     , Fragnix.Core.Update
   other-modules:
   build-depends:       aeson >=1.4 && <1.5
                      , base ^>=4.13.0.0
