--- a/fragnix-core.cabal
+++ b/fragnix-core.cabal
@@ -16,9 +16,11 @@ extra-source-files:  CHANGELOG.md
 library
   exposed-modules:     Fragnix.Core.Slice
                      , Fragnix.Core.Update
+                     , Fragnix.Core.Environment
   other-modules:
   build-depends:       aeson >=1.4 && <1.5
                      , base ^>=4.13.0.0
+                     , containers >=0.6 && <0.7
                      , hashable >=1.3 && <1.4
                      , text >=1.2 && < 1.3
 
